# sandbox

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  vercel.json
chem-surface/: package.json  tsconfig.json
chem-surface/src/: index.ts  worker.ts
mol-renderer/: package.json  vite.config.ts
mol-renderer/src/: index.ts
mol-renderer/src/lib/hooks/: useCameraFrameOnScene.ts  useFilteredScene.ts  useRenderKeys.ts  useSceneObjects.ts
mol-renderer/src/types/: glsl.d.ts
mol-renderer/src/viewer/: GridRaycast.tsx  MoleculeRender.tsx
mol-viewer/: package.json
mol-viewer/src/: App.tsx
mol-viewer/src/viewer/: MainView.tsx  SurfaceRender.tsx
pdb-crawler/: .gitignore  README.md  pyproject.toml
pdb-crawler/pdb_crawler/: __init__.py  __main__.py  downloader.py  rcsb_client.py  sampling.py
pdb-crawler/pdb_crawler/queries/: count_all.json  enumerate_all.json
pdb-parser/: .gitignore  LICENSE  README.md  package.json  tsconfig.json
pdb-parser/src/: index.ts
pdb-parser/src/pdb/: heuristicWorker.ts  parse.ts
pdb-parser/src/select/: selection.ts
pdb-parser/src/types/: molScene.ts
pdb-parser/src/utils/: buildIndex.ts  elements.ts  subset.ts  warnings.ts
pdb-parser/tests/: bulk.spec.ts  parser.spec.ts
pdb-viewer/: 4nr7.cif  README.md  index.html  package.json  vercel.json
pdb-viewer/src/: App.tsx
pdb-viewer/src/viewer/: GridRaycast.tsx  MainView.tsx  MoleculeRender.tsx  MoleculeView.tsx  OutlineComposer.tsx  StructureControls.tsx  pickerWorker.ts  types.ts  useMolScene.ts
(+26 files in other folders)
