[tool.poetry]
name = "pdb-crawler"
version = "0.1.0"
description = "Async crawler for RCSB PDB: count entries, enumerate IDs, sample, and fetch PDB/CIF files in parallel."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pdb_crawler" }]
include = [
  { path = "pdb_crawler/queries/*.json", format = "sdist" },
  { path = "pdb_crawler/queries/*.json", format = "wheel" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
aiohttp = "^3.9.5"
typer = {version = "^0.12.3", extras = ["all"]}
rich = "^13.7.1"
aiofiles = "^24.1.0"
click = ">=8.1.3,<8.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[tool.poetry.scripts]
pdb-crawler = "pdb_crawler.__main__:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
